# data_engineering_zoomcamp

./: .gitignore
pipeline/: dockerfile  ingest_data.py  notebook.ipynb  pipeline.py  pyproject.toml
