[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=3.0.3",
    "psycopg2>=2.9.12",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=25.0.0",
    "sqlalchemy>=2.0.51",
    "tqdm>=4.68.4",
]

[dependency-groups]
dev = [
    "pgcli>=4.5.0",
]
